benerin boolean dan query pake yang bryan (perlu refactor) dan implementasi tolerant retrieval